fix(css): fixes button misalignment when refreshing clients mozilla/fxa-content-server#5945) r=@vladikoff
Fixes mozilla/fxa-bugzilla-mirror#456

--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -197,10 +197,12 @@ body.settings #main-content.card {
         }
       }
 
-      html[dir] .clients & {
-        @include respond-to('small') {
-          float: none;
-          margin: 10px 0;
+      &:not(.clients-done) {
+        html[dir] .clients & {
+          @include respond-to('small') {
+            float: none;
+            margin: 10px 0;
+          }
         }
       }
     }
